--- a/css/main.css
+++ b/css/main.css
@@ -2802,9 +2802,13 @@ body {
     outline: 0; }
 
 img {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
   border-radius: 1px; }
+@media only screen and (max-width: 600px) {
+  img  {
+    height: 100%;
+  }
+}
 
 .img-raised {
   box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); }
